// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Components FlipNumbers Component details should render the component correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#333333",
          "elevation": 5,
          "margin": 3,
          "shadowColor": "#1f1f1f",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 2,
        },
        Object {
          "borderRadius": 12.5,
          "height": 150,
          "width": 100,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#1f1f1f",
            "flex": 0.5,
            "justifyContent": "center",
            "overflow": "hidden",
          },
          Object {
            "borderBottomWidth": 0.5,
          },
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#cccccc",
              "fontWeight": "700",
            },
            Object {
              "fontSize": 83.33333333333333,
              "lineHeight": 83.33333333333333,
              "transform": Array [
                Object {
                  "translateY": 37.5,
                },
              ],
            },
            Object {},
          ]
        }
      >
        1
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#1f1f1f",
            "flex": 0.5,
            "justifyContent": "center",
            "overflow": "hidden",
          },
          Object {
            "borderTopWidth": 0.5,
          },
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#cccccc",
              "fontWeight": "700",
            },
            Object {
              "fontSize": 83.33333333333333,
              "lineHeight": 83.33333333333333,
              "transform": Array [
                Object {
                  "translateY": -37.5,
                },
              ],
            },
            Object {},
          ]
        }
      >
        9
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backfaceVisibility": "hidden",
          "backgroundColor": "#333333",
          "borderBottomWidth": 0.5,
          "borderColor": "#1f1f1f",
          "borderTopLeftRadius": 12.5,
          "borderTopRightRadius": 12.5,
          "height": "50%",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": 37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          9
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backfaceVisibility": "hidden",
          "backgroundColor": "#333333",
          "borderBottomLeftRadius": 12.5,
          "borderBottomRightRadius": 12.5,
          "borderColor": "#1f1f1f",
          "borderTopWidth": 0.5,
          "height": "50%",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "top": "50%",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": -37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          1
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#333333",
          "elevation": 5,
          "margin": 3,
          "shadowColor": "#1f1f1f",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 2,
        },
        Object {
          "borderRadius": 12.5,
          "height": 150,
          "width": 100,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#1f1f1f",
            "flex": 0.5,
            "justifyContent": "center",
            "overflow": "hidden",
          },
          Object {
            "borderBottomWidth": 0.5,
          },
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#cccccc",
              "fontWeight": "700",
            },
            Object {
              "fontSize": 83.33333333333333,
              "lineHeight": 83.33333333333333,
              "transform": Array [
                Object {
                  "translateY": 37.5,
                },
              ],
            },
            Object {},
          ]
        }
      >
        0
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#1f1f1f",
            "flex": 0.5,
            "justifyContent": "center",
            "overflow": "hidden",
          },
          Object {
            "borderTopWidth": 0.5,
          },
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#cccccc",
              "fontWeight": "700",
            },
            Object {
              "fontSize": 83.33333333333333,
              "lineHeight": 83.33333333333333,
              "transform": Array [
                Object {
                  "translateY": -37.5,
                },
              ],
            },
            Object {},
          ]
        }
      >
        9
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backfaceVisibility": "hidden",
          "backgroundColor": "#333333",
          "borderBottomWidth": 0.5,
          "borderColor": "#1f1f1f",
          "borderTopLeftRadius": 12.5,
          "borderTopRightRadius": 12.5,
          "height": "50%",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": 37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          9
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backfaceVisibility": "hidden",
          "backgroundColor": "#333333",
          "borderBottomLeftRadius": 12.5,
          "borderBottomRightRadius": 12.5,
          "borderColor": "#1f1f1f",
          "borderTopWidth": 0.5,
          "height": "50%",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "top": "50%",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": -37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          0
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Testing Components FormatNumbers Component details should render the component correctly 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#333333",
            "elevation": 5,
            "margin": 3,
            "shadowColor": "#1f1f1f",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 2,
          },
          Object {
            "borderRadius": 12.5,
            "height": 150,
            "width": 100,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#1f1f1f",
              "flex": 0.5,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "borderBottomWidth": 0.5,
            },
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": 37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          0
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#1f1f1f",
              "flex": 0.5,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "borderTopWidth": 0.5,
            },
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": -37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          2
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backfaceVisibility": "hidden",
            "backgroundColor": "#333333",
            "borderBottomWidth": 0.5,
            "borderColor": "#1f1f1f",
            "borderTopLeftRadius": 12.5,
            "borderTopRightRadius": 12.5,
            "height": "50%",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#cccccc",
                  "fontWeight": "700",
                },
                Object {
                  "fontSize": 83.33333333333333,
                  "lineHeight": 83.33333333333333,
                  "transform": Array [
                    Object {
                      "translateY": 37.5,
                    },
                  ],
                },
                Object {},
              ]
            }
          >
            2
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backfaceVisibility": "hidden",
            "backgroundColor": "#333333",
            "borderBottomLeftRadius": 12.5,
            "borderBottomRightRadius": 12.5,
            "borderColor": "#1f1f1f",
            "borderTopWidth": 0.5,
            "height": "50%",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "top": "50%",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#cccccc",
                  "fontWeight": "700",
                },
                Object {
                  "fontSize": 83.33333333333333,
                  "lineHeight": 83.33333333333333,
                  "transform": Array [
                    Object {
                      "translateY": -37.5,
                    },
                  ],
                },
                Object {},
              ]
            }
          >
            0
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#333333",
            "elevation": 5,
            "margin": 3,
            "shadowColor": "#1f1f1f",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 2,
          },
          Object {
            "borderRadius": 12.5,
            "height": 150,
            "width": 100,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#1f1f1f",
              "flex": 0.5,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "borderBottomWidth": 0.5,
            },
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": 37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          0
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#1f1f1f",
              "flex": 0.5,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "borderTopWidth": 0.5,
            },
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": -37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          3
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backfaceVisibility": "hidden",
            "backgroundColor": "#333333",
            "borderBottomWidth": 0.5,
            "borderColor": "#1f1f1f",
            "borderTopLeftRadius": 12.5,
            "borderTopRightRadius": 12.5,
            "height": "50%",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#cccccc",
                  "fontWeight": "700",
                },
                Object {
                  "fontSize": 83.33333333333333,
                  "lineHeight": 83.33333333333333,
                  "transform": Array [
                    Object {
                      "translateY": 37.5,
                    },
                  ],
                },
                Object {},
              ]
            }
          >
            3
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backfaceVisibility": "hidden",
            "backgroundColor": "#333333",
            "borderBottomLeftRadius": 12.5,
            "borderBottomRightRadius": 12.5,
            "borderColor": "#1f1f1f",
            "borderTopWidth": 0.5,
            "height": "50%",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "top": "50%",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#cccccc",
                  "fontWeight": "700",
                },
                Object {
                  "fontSize": 83.33333333333333,
                  "lineHeight": 83.33333333333333,
                  "transform": Array [
                    Object {
                      "translateY": -37.5,
                    },
                  ],
                },
                Object {},
              ]
            }
          >
            0
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "space-around",
        "marginHorizontal": 5,
        "marginVertical": 10,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#333333",
          "borderRadius": 5,
          "height": 5,
          "width": 5,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#333333",
          "borderRadius": 5,
          "height": 5,
          "width": 5,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#333333",
            "elevation": 5,
            "margin": 3,
            "shadowColor": "#1f1f1f",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 2,
          },
          Object {
            "borderRadius": 12.5,
            "height": 150,
            "width": 100,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#1f1f1f",
              "flex": 0.5,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "borderBottomWidth": 0.5,
            },
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": 37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          1
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#1f1f1f",
              "flex": 0.5,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "borderTopWidth": 0.5,
            },
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": -37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          1
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backfaceVisibility": "hidden",
            "backgroundColor": "#333333",
            "borderBottomWidth": 0.5,
            "borderColor": "#1f1f1f",
            "borderTopLeftRadius": 12.5,
            "borderTopRightRadius": 12.5,
            "height": "50%",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#cccccc",
                  "fontWeight": "700",
                },
                Object {
                  "fontSize": 83.33333333333333,
                  "lineHeight": 83.33333333333333,
                  "transform": Array [
                    Object {
                      "translateY": 37.5,
                    },
                  ],
                },
                Object {},
              ]
            }
          >
            1
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backfaceVisibility": "hidden",
            "backgroundColor": "#333333",
            "borderBottomLeftRadius": 12.5,
            "borderBottomRightRadius": 12.5,
            "borderColor": "#1f1f1f",
            "borderTopWidth": 0.5,
            "height": "50%",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "top": "50%",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#cccccc",
                  "fontWeight": "700",
                },
                Object {
                  "fontSize": 83.33333333333333,
                  "lineHeight": 83.33333333333333,
                  "transform": Array [
                    Object {
                      "translateY": -37.5,
                    },
                  ],
                },
                Object {},
              ]
            }
          >
            1
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#333333",
            "elevation": 5,
            "margin": 3,
            "shadowColor": "#1f1f1f",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 2,
          },
          Object {
            "borderRadius": 12.5,
            "height": 150,
            "width": 100,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#1f1f1f",
              "flex": 0.5,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "borderBottomWidth": 0.5,
            },
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": 37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          6
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#1f1f1f",
              "flex": 0.5,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "borderTopWidth": 0.5,
            },
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": -37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backfaceVisibility": "hidden",
            "backgroundColor": "#333333",
            "borderBottomWidth": 0.5,
            "borderColor": "#1f1f1f",
            "borderTopLeftRadius": 12.5,
            "borderTopRightRadius": 12.5,
            "height": "50%",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#cccccc",
                  "fontWeight": "700",
                },
                Object {
                  "fontSize": 83.33333333333333,
                  "lineHeight": 83.33333333333333,
                  "transform": Array [
                    Object {
                      "translateY": 37.5,
                    },
                  ],
                },
                Object {},
              ]
            }
          >
            5
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backfaceVisibility": "hidden",
            "backgroundColor": "#333333",
            "borderBottomLeftRadius": 12.5,
            "borderBottomRightRadius": 12.5,
            "borderColor": "#1f1f1f",
            "borderTopWidth": 0.5,
            "height": "50%",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "top": "50%",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#cccccc",
                  "fontWeight": "700",
                },
                Object {
                  "fontSize": 83.33333333333333,
                  "lineHeight": 83.33333333333333,
                  "transform": Array [
                    Object {
                      "translateY": -37.5,
                    },
                  ],
                },
                Object {},
              ]
            }
          >
            6
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "space-around",
        "marginHorizontal": 5,
        "marginVertical": 10,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#333333",
          "borderRadius": 5,
          "height": 5,
          "width": 5,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#333333",
          "borderRadius": 5,
          "height": 5,
          "width": 5,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#333333",
            "elevation": 5,
            "margin": 3,
            "shadowColor": "#1f1f1f",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 2,
          },
          Object {
            "borderRadius": 12.5,
            "height": 150,
            "width": 100,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#1f1f1f",
              "flex": 0.5,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "borderBottomWidth": 0.5,
            },
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": 37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          4
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#1f1f1f",
              "flex": 0.5,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "borderTopWidth": 0.5,
            },
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": -37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          3
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backfaceVisibility": "hidden",
            "backgroundColor": "#333333",
            "borderBottomWidth": 0.5,
            "borderColor": "#1f1f1f",
            "borderTopLeftRadius": 12.5,
            "borderTopRightRadius": 12.5,
            "height": "50%",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#cccccc",
                  "fontWeight": "700",
                },
                Object {
                  "fontSize": 83.33333333333333,
                  "lineHeight": 83.33333333333333,
                  "transform": Array [
                    Object {
                      "translateY": 37.5,
                    },
                  ],
                },
                Object {},
              ]
            }
          >
            3
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backfaceVisibility": "hidden",
            "backgroundColor": "#333333",
            "borderBottomLeftRadius": 12.5,
            "borderBottomRightRadius": 12.5,
            "borderColor": "#1f1f1f",
            "borderTopWidth": 0.5,
            "height": "50%",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "top": "50%",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#cccccc",
                  "fontWeight": "700",
                },
                Object {
                  "fontSize": 83.33333333333333,
                  "lineHeight": 83.33333333333333,
                  "transform": Array [
                    Object {
                      "translateY": -37.5,
                    },
                  ],
                },
                Object {},
              ]
            }
          >
            4
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#333333",
            "elevation": 5,
            "margin": 3,
            "shadowColor": "#1f1f1f",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 2,
          },
          Object {
            "borderRadius": 12.5,
            "height": 150,
            "width": 100,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#1f1f1f",
              "flex": 0.5,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "borderBottomWidth": 0.5,
            },
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": 37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          0
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderColor": "#1f1f1f",
              "flex": 0.5,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            Object {
              "borderTopWidth": 0.5,
            },
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontWeight": "700",
              },
              Object {
                "fontSize": 83.33333333333333,
                "lineHeight": 83.33333333333333,
                "transform": Array [
                  Object {
                    "translateY": -37.5,
                  },
                ],
              },
              Object {},
            ]
          }
        >
          9
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backfaceVisibility": "hidden",
            "backgroundColor": "#333333",
            "borderBottomWidth": 0.5,
            "borderColor": "#1f1f1f",
            "borderTopLeftRadius": 12.5,
            "borderTopRightRadius": 12.5,
            "height": "50%",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#cccccc",
                  "fontWeight": "700",
                },
                Object {
                  "fontSize": 83.33333333333333,
                  "lineHeight": 83.33333333333333,
                  "transform": Array [
                    Object {
                      "translateY": 37.5,
                    },
                  ],
                },
                Object {},
              ]
            }
          >
            9
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backfaceVisibility": "hidden",
            "backgroundColor": "#333333",
            "borderBottomLeftRadius": 12.5,
            "borderBottomRightRadius": 12.5,
            "borderColor": "#1f1f1f",
            "borderTopWidth": 0.5,
            "height": "50%",
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "top": "50%",
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#cccccc",
                  "fontWeight": "700",
                },
                Object {
                  "fontSize": 83.33333333333333,
                  "lineHeight": 83.33333333333333,
                  "transform": Array [
                    Object {
                      "translateY": -37.5,
                    },
                  ],
                },
                Object {},
              ]
            }
          >
            0
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
